# cash_flow_service

./: CLAUDE.md  Dockerfile  Makefile  README.md  docker-entrypoint.sh  pyproject.toml
cash_flow_service/: manage.py
cash_flow_service/cash_flow_service/: asgi.py  settings.py  urls.py  wsgi.py
cash_flow_service/cashflow/: admin.py  apps.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py  web.py  web_urls.py
cash_flow_service/cashflow/management/commands/: seed_demo.py
cash_flow_service/cashflow/migrations/: 0001_initial.py  0002_cashflowrecord.py
cash_flow_service/cashflow/templates/cashflow/: base.html  record_form.html  records_list.html  reference.html
openspec/changes/archive/2026-07-08-bootstrap-django-app/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-08-cash-flow-records/: proposal.md  tasks.md
openspec/changes/archive/2026-07-08-records-list-filtering/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-08-reference-catalog/: tasks.md
openspec/changes/cash-flow-records/: design.md  tasks.md
openspec/changes/records-list-filtering/: tasks.md
openspec/changes/reference-catalog/: design.md  proposal.md  tasks.md
openspec/changes/run-docs/: design.md  proposal.md  tasks.md
openspec/changes/web-frontend/: design.md  proposal.md  tasks.md
openspec/specs/cash-flow-records/: spec.md
openspec/specs/project-foundation/: spec.md
openspec/specs/records-filtering/: spec.md
openspec/specs/records-web-ui/: spec.md
openspec/specs/reference-catalog/: spec.md
openspec/specs/reference-web-ui/: spec.md
(+13 files in other folders)
